[gd_scene load_steps=23 format=2]

[ext_resource path="res://recursos/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://juego/personaje/PersonajePrincipal.gd" type="Script" id=2]
[ext_resource path="res://recursos/Players/bunny2_walk2.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny2_jump.png" type="Texture" id=4]
[ext_resource path="res://recursos/Players/bunny2_ready.png" type="Texture" id=5]
[ext_resource path="res://recursos/Players/bunny2_walk1.png" type="Texture" id=6]
[ext_resource path="res://recursos/Sfx/Jump.wav" type="AudioStream" id=7]
[ext_resource path="res://recursos/Items/wing_right.png" type="Texture" id=8]
[ext_resource path="res://recursos/Items/wing_left.png" type="Texture" id=9]
[ext_resource path="res://recursos/Particles/smoke.png" type="Texture" id=10]
[ext_resource path="res://recursos/Sfx/Dash.wav" type="AudioStream" id=11]

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( -100, 1, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.7
color = Color( 0.533333, 0.458824, 0.533333, 1 )
anim_speed = 128.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "Correr",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Saltar",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 44.0
height = 44.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.25, 4 )

[sub_resource type="Animation" id=8]
resource_name = "Aclarar"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Entrar_Portal"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ala_Derecha:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ala_Izquierda:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Oscurecer"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ala_Derecha:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ala_Izquierda:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ala_Derecha:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ala_Izquierda:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Volar"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Ala_Derecha:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, -10.0, -50.0, -10.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ala_Izquierda:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, 50.0, 10.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ala_Derecha:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ala_Izquierda:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioDash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0, 0.001 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Saltarina" type="KinematicBody2D" groups=["jugador"]]
position = Vector2( 0, -54 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 61
script = ExtResource( 2 )
velocidad = Vector2( 600, 900 )
acel_caida = 200
fuerza_salto = 2300
impulso = -3500

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 2, 26 )
emitting = false
lifetime = 3.36
speed_scale = 21.78
process_material = SubResource( 12 )
texture = ExtResource( 10 )

[node name="Ala_Derecha" type="Sprite" parent="."]
position = Vector2( 42, 14 )
texture = ExtResource( 8 )
offset = Vector2( 40, -14 )

[node name="Ala_Izquierda" type="Sprite" parent="."]
position = Vector2( -42, 14 )
texture = ExtResource( 9 )
offset = Vector2( -40, -14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 14 )
frames = SubResource( 2 )
animation = "Idle"

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="AudioDash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.8, 1.8 )
limit_bottom = 1000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, 104 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Aclarar = SubResource( 8 )
anims/Entrar_Portal = SubResource( 7 )
anims/Idle = SubResource( 6 )
anims/Oscurecer = SubResource( 9 )
anims/RESET = SubResource( 4 )
anims/Volar = SubResource( 5 )
anims/dash = SubResource( 11 )

[node name="EnfriadorSalto" type="Timer" parent="."]
wait_time = 1.5

[node name="EnfriamientoVolar" type="Timer" parent="."]
wait_time = 1.5

[node name="EnfriadorDash" type="Timer" parent="."]
wait_time = 0.2

[node name="EnfriadorRecargaDash" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0, 0, 1 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriadorSalto" to="." method="_on_EnfriadorSalto_timeout"]
[connection signal="timeout" from="EnfriamientoVolar" to="." method="_on_EnfriamientoVolar_timeout"]
[connection signal="timeout" from="EnfriadorDash" to="." method="_on_EnfriadorDash_timeout"]
[connection signal="timeout" from="EnfriadorRecargaDash" to="." method="_on_EnfriadorRecargaDash_timeout"]
